# freeswitch

./: .drone.yml  .gitattributes  .gitignore  .mailmap  Fluxpbx.2017.sln  Fluxpbx.2017.sln.bat  LICENSE  Makefile.am  README.md  bootstrap.sh  configure.ac  fluxpbx-config-rayo.spec  fluxpbx-sounds-en-ca-june.spec  fluxpbx-sounds-en-us-allison.spec  fluxpbx-sounds-en-us-callie.spec  fluxpbx-sounds-fr-ca-june.spec  fluxpbx-sounds-music.spec  fluxpbx-sounds-pt-BR-karina.spec  fluxpbx-sounds-ru-RU-elena.spec  fluxpbx-sounds-sv-se-jakob.spec  fluxpbx.spec  freeswitch-config-rayo.spec  freeswitch-sounds-en-us-callie.spec
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
clients/flex/: build.sh  fluxpbx-video.html  fluxpbx.html  fluxpbx.mxml
conf/: fluxpbx.xml
conf/insideout/: fluxpbx.xml  mime.types  notify-voicemail.tpl  vars.xml  voicemail.tpl
conf/minimal/: README.md  fluxpbx.xml
conf/rayo/: fluxpbx.xml  vars.xml
conf/sbc/: fluxpbx.xml  vars.xml
conf/softphone/: fluxpbx.xml
conf/testing/: fluxpbx.xml  vars.xml
conf/vanilla/: README_IMPORTANT.txt  extensions.conf  fluxpbx.xml  mime.types  notify-voicemail.tpl  vars.xml  voicemail.tpl  web-vm.tpl
debian/: .gitignore  AUTHORS  README.Debian  README.source  bootstrap.sh  changelog  control-modules  copyright  fluxpbx-mod-java.install.tmpl  fluxpbx-mod-managed.install.tmpl  fluxpbx-mod-perl.install.tmpl  fluxpbx-mod-pocketsphinx.install.tmpl  fluxpbx-mod-python.install.tmpl  fluxpbx-mod-python3.install.tmpl  fluxpbx-systemd.fluxpbx.service  fluxpbx-systemd.fluxpbx.tmpfile  fluxpbx-sysvinit.fluxpbx.default  fluxpbx-sysvinit.fluxpbx.init  fluxpbx-timezones.install  fluxpbx.dirs  fluxpbx.install  fluxpbx.postinst  fluxpbx.postrm  fluxpbx.preinst  libfluxpbx-dev.install  libfluxpbx1.install  license-reconcile.yml  rules  util.sh
docker/: README.md
docker/base_image/: Dockerfile  README.md  docker-entrypoint.sh  fluxpbx-config.patch  healthcheck.sh  make_min_archive.sh  sounds_version.txt
docker/examples/: README.md
docker/master/: Dockerfile
docs/: AUTHORS  ChangeLog  Debugging  Doxygen.conf  GivingBack  SubmittingPatches  how_to_make_your_own_ca_correctly.txt
fscomm/: FSComm.2008.vcproj  FSComm.pro  account.cpp  call.cpp  call.h  fshost.cpp  fshost.h  isettings.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
libs/esl/: fs_cli.c  (+1 more)
scripts/: FluxPBX-debian-raspbian-installer.sh  backtrace-from-core  dailys.sh  debian_min_build.sh  debug_sofia.sh  fluxpbx-gcore  fluxpbx-reporter  fluxpbx.pkg_deps.sh  fluxpbx.sh  freeswitch.pkg_deps.sh  fsxs.in  gentls_cert.in  setup-git.sh  tagscript.sh
src/: CMakeLists.txt  fs_encode.c  fs_tts.c  switch.c  switch_apr.c  switch_buffer.c  switch_caller.c  switch_channel.c  switch_config.c  switch_console.c  switch_core.c  switch_core_asr.c  switch_core_cert.c  switch_core_codec.c  switch_core_db.c  switch_core_directory.c  switch_core_event_hook.c  switch_core_file.c  switch_core_hash.c  switch_core_io.c  switch_core_media.c  switch_core_media_bug.c  switch_core_memory.c  switch_core_port_allocator.c  switch_core_rwlock.c  switch_core_session.c  switch_core_speech.c  switch_core_sqldb.c  switch_core_state_machine.c  switch_core_timer.c  switch_core_video.c  switch_cpp.cpp  switch_estimators.c  switch_event.c  switch_ivr.c  switch_ivr_async.c  switch_ivr_bridge.c  switch_ivr_menu.c  switch_ivr_originate.c  switch_ivr_play_say.c  (+28 more)
src/mod/languages/mod_java/: .gitattributes  Makefile.am  fluxpbx_java.cpp  fluxpbx_java.h  mod_java.i  modjava.c  switch_swig_wrap.cpp
src/mod/languages/mod_java/src/org/freeswitch/: ApplicationLauncher.java  DTMFCallback.java  Event.java  FluxpbxScript.java  HangupHook.java  Launcher.java  OriginateStateHandler.java  StateHandler.java
src/mod/languages/mod_java/src/org/freeswitch/swig/: API.java  CoreSession.java  DTMF.java  Event.java  EventConsumer.java  IVRMenu.java  JavaSession.java  SWIGTYPE_p_CoreSession.java  SWIGTYPE_p_JavaVM.java  SWIGTYPE_p_SWITCH_DECLARE_CLASS.java  SWIGTYPE_p_int.java  SWIGTYPE_p_p_switch_event_node_t.java  SWIGTYPE_p_switch_call_cause_t.java  SWIGTYPE_p_switch_channel_state_t.java  SWIGTYPE_p_switch_channel_t.java  SWIGTYPE_p_switch_core_session_t.java  SWIGTYPE_p_switch_event_node_t.java  SWIGTYPE_p_switch_event_t.java  SWIGTYPE_p_switch_event_types_t.java  SWIGTYPE_p_switch_input_args_t.java  SWIGTYPE_p_switch_input_type_t.java  SWIGTYPE_p_switch_priority_t.java  SWIGTYPE_p_switch_queue_t.java  SWIGTYPE_p_switch_size_t.java  SWIGTYPE_p_switch_state_handler_table_t.java  SWIGTYPE_p_switch_status_t.java  SWIGTYPE_p_switch_stream_handle_t.java  SWIGTYPE_p_uint32_t.java  SWIGTYPE_p_void.java  Stream.java  fluxpbx.java  fluxpbxJNI.java  input_callback_state_t.java  session_flag_t.java
src/mod/languages/mod_managed/: Makefile.am  fluxpbx.i  fluxpbx_managed.cpp  fluxpbx_managed.h  fluxpbx_wrap.cxx  mod_managed.2017.vcxproj  mod_managed.cpp  mono28.patch  runswig.2010.cmd  runswig.cmd
src/mod/languages/mod_managed/managed/: AssemblyInfo.cs  ChannelVariables.cs  Demo.csx  EventBinding.cs  Extensions.cs  FluxPBX.Managed.2017.csproj  FluxPBX.Managed.csproj  Loader.cs  Log.cs  Makefile  ManagedSession.cs  PluginInterfaces.cs  PluginManager.cs  ScriptPluginManager.cs  Util.cs  XmlSearchBinding.cs  swig.cs
src/mod/languages/mod_managed/managed/examples/easyroute/: EasyRoute.fsproj  easyroute.fs
src/mod/languages/mod_managed/managed/examples/winFailToBan/: BanTracker.cs  EventLoop.cs  Fail2Ban.cs  skel.cs  winFailToBan.csproj
src/mod/languages/mod_managed/managed/examples/winFailToBan/Internal/: ConfigHandler.cs  ConfigHelper.cs
src/mod/sdk/autotools/: configure.ac
src/mod/sdk/autotools/src/: Makefile.am  mod_example.c
support-d/: .bashrc  .gdbinit  c3p0.pub  fluxpbx.pub  fscore_pb  rbfs
w32/: download_sofia-sip.props  download_sounds.props  download_spandsp.props  downloadpackage.task  libks.props  lua.props  signalwire-client-c.props  sound_tools.props  switch_version.props  v8.props  winlibs.props
yum/: fluxpbx-release.spec  fluxpbx-testing.repo  fluxpbx.repo  rpmbuilder.sh
(+1079 files in other folders)
